--- a/index.html
+++ b/index.html
@@ -1,42 +1,39 @@
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV của Tôi</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            line-height: 1.6;
-        }
-        h1, h2 {
-            color: #333;
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>Tên của bạn</h1>
-        <h2>Thông tin liên hệ</h2>
-        <p>Email: email@example.com</p>
-        <p>Điện thoại: 0123456789</p>
-        <h2>Giới thiệu</h2>
-        <p>Đoạn giới thiệu về bản thân.</p>
-        <h2>Kinh nghiệm làm việc</h2>
-        <ul>
-            <li>Công việc 1</li>
-            <li>Công việc 2</li>
-        </ul>
-        <h2>Học vấn</h2>
-        <ul>
-            <li>Trường 1</li>
-            <li>Trường 2</li>
-        </ul>
-    </div>
-</body>
-</html>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252" charset="utf-8">
+        <title>Phạm Ngọc Phước Khang - Sinh viên Trường Đại học Sài Gòn </title>
+<style type="text/css"></style></head>
+    <body><table border="0" width="980px" align="center"><tbody><tr><td>
+    
+        </td><td valign="top">
+        <br>
+        <table style="font-size: 11pt;" border="0" width="100%">
+            <tbody><tr>
+                <td width="50%">
+                    <img width="250" src="./index_files/mypic4.jpg" border="0">
+                </td>
+                <td>
+                    <font face="helvetica , ariel, &#39;sans serif&#39;" size="6"> 
+                        <b>Phạm Ngọc Phước Khang</b><br><br>
+                    </font>
+                    <font face="helvetica , ariel, &#39;sans serif&#39;" size="4"> 
+                        Sinh viên<br>
+                        Đại học Sài Gòn<br>
+                        Thành phố Hồ Chí Minh, Việt Nam<br><br>
+                        rizhang at adobe.com<br>
+                        [<a href="https://github.com/" border="0">GitHub</a>]
+                    </font>
+                </td>
+            </tr>
+        </tbody></table> 
+        <p>
+        </p><hr size="2" align="left" noshade="">
+        <p>
+        
+        <font face="helvetica, ariel, &#39;sans serif&#39;">
+        My research interests are in computer vision, machine learning, deep learning, graphics, and image processing. I obtained a PhD at UC Berkeley, advised by Prof. <a href="http://www.eecs.berkeley.edu/~efros/">Alexei (Alyosha) Efros</a>. I obtained BS and MEng degrees from Cornell University in ECE. I often collaborate with academic researchers, either through internships or university collaboration.<br><br>
+
+        <b>Recent media.</b>
+        <br>
+        <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.podcasts.apple.com/us/podcast/visual-generative-ai-ecosystem-challenges-with-richard/id1116303051?i=1000635452895"></iframe>
+
+        <!-- <br><br> -->
+        </p><hr size="2" align="left" noshade="">
