--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
         <table style="font-size: 11pt;" border="0" width="100%">
             <tbody><tr>
                 <td width="50%">
-                    <img width="250" src="./index_files/mypic4.jpg" border="0">
+                    <img width="250" src="./index_files/my_pic.jpg" border="0">
                 </td>
                 <td>
                     <font face="helvetica , ariel, &#39;sans serif&#39;" size="6"> 
                         <b>Phạm Ngọc Phước Khang</b><br><br>
                     </font>
                     <font face="helvetica , ariel, &#39;sans serif&#39;" size="4"> 
-                        Sinh viên<br>
+                        Sinh viên Năm 3<br>
                         Đại học Sài Gòn<br>
                         Thành phố Hồ Chí Minh, Việt Nam<br><br>
-                        rizhang at adobe.com<br>
+                        Khang at Sai Gon University<br>
                         [<a href="https://github.com/" border="0">GitHub</a>]
                     </font>
                 </td>
@@ -29,11 +29,11 @@
         <p>
         
         <font face="helvetica, ariel, &#39;sans serif&#39;">
-        My research interests are in computer vision, machine learning, deep learning, graphics, and image processing. I obtained a PhD at UC Berkeley, advised by Prof. <a href="http://www.eecs.berkeley.edu/~efros/">Alexei (Alyosha) Efros</a>. I obtained BS and MEng degrees from Cornell University in ECE. I often collaborate with academic researchers, either through internships or university collaboration.<br><br>
+        <br><br>
 
-        <b>Recent media.</b>
+        <b>Thông tin liên hệ</b>
         <br>
-        <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.podcasts.apple.com/us/podcast/visual-generative-ai-ecosystem-challenges-with-richard/id1116303051?i=1000635452895"></iframe>
+        <p>Email: phuockhang7804@gmail.com</p>
 
         <!-- <br><br> -->
         </p><hr size="2" align="left" noshade="">
