--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                     </font>
                     <font face="helvetica , ariel, &#39;sans serif&#39;" size="4"> 
                         Sinh viên Năm 3<br>
-                        Đại học Sài Gòn<br>
+                        Trường Đại học Sài Gòn<br>
                         Thành phố Hồ Chí Minh, Việt Nam<br><br>
-                        Khang at Sai Gon University<br>
-                        [<a href="https://github.com/" border="0">GitHub</a>]
+                        Khang at Saigon University (SGU)<br>
+                        [<a href="https://github.com/phuockhang7804" border="0">GitHub</a>]
                     </font>
                 </td>
             </tr>
@@ -27,13 +27,24 @@
         <p>
         </p><hr size="2" align="left" noshade="">
         <p>
-        
+        Hiện đang là sinh viên năm 3 trường Đại học Sài Gòn. Đề tài nghiên cứu hiện tại là phân đoạn bàn tay.
         <font face="helvetica, ariel, &#39;sans serif&#39;">
         <br><br>
 
         <b>Thông tin liên hệ</b>
         <br>
         <p>Email: phuockhang7804@gmail.com</p>
+        <p>Điện thoại: 0363200126</p>
+
+        <b>Học vấn</b>
+        <br>
+        <ul>
+                <li>Tốt nghiệp Trường Tiểu học An Hạ</li>
+                <li>Tốt nghiệp Trường Trung học Cơ Sở Phạm Văn Hai</li>
+                <li>Tốt nghiệp Trường Trung học Phổ Thông Lê Minh Xuân</li>
+                <li>Đang theo học tại Trường Đại học Sài Gòn</li>
+        </ul>
+        
 
         <!-- <br><br> -->
         </p><hr size="2" align="left" noshade="">
