--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <br>
         <p>Email: phuockhang7804@gmail.com</p>
         <p>Điện thoại: 0363200126</p>
+        <p>
+        </p><hr size="2" align="left" noshade="">
 
         <b>Học vấn</b>
         <br>
