--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         <p>
         </p><hr size="2" align="left" noshade="">
         <p>
-        Hiện đang là sinh viên năm 3 trường Đại học Sài Gòn. Đề tài nghiên cứu hiện tại là phân đoạn bàn tay.
+        
         <font face="helvetica, ariel, &#39;sans serif&#39;">
+        Hiện đang là sinh viên năm 3 trường Đại học Sài Gòn. Đề tài nghiên cứu hiện tại là phân đoạn bàn tay (hand segmentation).
         <br><br>
 
         <b>Thông tin liên hệ</b>
@@ -41,9 +42,9 @@
         <b>Học vấn</b>
         <br>
         <ul>
-                <li>Tốt nghiệp Trường Tiểu học An Hạ</li>
-                <li>Tốt nghiệp Trường Trung học Cơ Sở Phạm Văn Hai</li>
-                <li>Tốt nghiệp Trường Trung học Phổ Thông Lê Minh Xuân</li>
+                <li>Tốt nghiệp tiểu học tại Trường Tiểu học An Hạ</li>
+                <li>Tốt nghiệp trung học cơ sở tại Trường Trung học Cơ Sở Phạm Văn Hai</li>
+                <li>Tốt nghiệp trung học phổ thông tại Trường Trung học Phổ Thông Lê Minh Xuân</li>
                 <li>Đang theo học tại Trường Đại học Sài Gòn</li>
         </ul>
         
