--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <font face="helvetica, ariel, &#39;sans serif&#39;">
         Hiện đang là sinh viên năm 3 trường Đại học Sài Gòn. Đề tài nghiên cứu hiện tại là phân đoạn bàn tay (hand segmentation).
         <br><br>
+        </p><hr size="2" align="left" noshade="">
 
         <b>Thông tin liên hệ</b>
         <br>
