--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <font face="helvetica, ariel, &#39;sans serif&#39;">
         <b>Giới thiệu</b>
         <p>
-        Hiện đang là sinh viên năm 3 trường Đại học Sài Gòn. Tôi là một lập trình viên phần mềm đang theo hướng phát triển ứng dụng web và di động. Tôi đam mê công nghệ và luôn tìm kiếm cơ hội học hỏi và phát triển bản thân. Đề tài nghiên cứu hiện tại của tôi là phân đoạn bàn tay (hand segmentation).
+        Hiện tôi là sinh viên năm 3 tại Trường Đại học Sài Gòn, chuyên ngành Kỹ thuật phần mềm. Tôi là một lập trình viên phần mềm đang theo hướng phát triển ứng dụng web và di động. Tôi đam mê công nghệ và luôn tìm kiếm cơ hội học hỏi và phát triển bản thân. Đề tài nghiên cứu hiện tại của tôi là phân đoạn bàn tay (hand segmentation).
         </p>
 <!--         <br><br> -->
         </p><hr size="2" align="left" noshade="">
@@ -48,7 +48,7 @@
         <ul>
                 <li>Ngôn ngữ lập trình: C/C++, Java, JavaScript</li>
                 <li>Công nghệ web: HTML, CSS, PHP</li>
-                <li>Cơ sở dữ liệu: MySQL, SQL server</li>
+                <li>Cơ sở dữ liệu: MySQL, SQL Server</li>
                 <li>Kỹ năng mềm: Làm việc nhóm, giao tiếp, giải quyết vấn đề</li>
         </ul>
         <p>
