--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         <b>Học vấn</b>
         <br>
         <ul>
-                <li>Đã theo học tại Trường Tiểu học An Hạ (2009-2014)</li>
-                <li>Đã theo học tại Trường Trung học Cơ Sở Phạm Văn Hai (2014-2018)</li>
-                <li>Đã theo học tại Trường Trung học Phổ Thông Lê Minh Xuân (2018-2021)</li>
-                <li>Đang theo học tại Trường Đại học Sài Gòn (2022-nay)</li>
+                <li>Trường Tiểu học An Hạ (2009-2014)</li>
+                <li>Trường Trung học Cơ Sở Phạm Văn Hai (2014-2018)</li>
+                <li>Trường Trung học Phổ Thông Lê Minh Xuân (2018-2021)</li>
+                <li>Trường Đại học Sài Gòn (2022-nay)</li>
         </ul>
         
 
