--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         Sinh viên Năm 3<br>
                         Trường Đại học Sài Gòn<br>
                         Thành phố Hồ Chí Minh, Việt Nam<br><br>
-                        Khang at Saigon University (SGU)<br>
+<!--                         Khang at Saigon University (SGU)<br> -->
                         [<a href="https://github.com/phuockhang7804" border="0">GitHub</a>]
                     </font>
                 </td>
